--- a/login.html
+++ b/login.html
@@ -247,15 +247,12 @@
           <label for="designation">Designation</label>
           <select id="designation" required>
             <option value="">-- Select Designation --</option>
-            <option value="patient">👤 Patient/User</option>
-            <option value="software_engineer">💻 Software Engineer</option>
-            <option value="ai_engineer">🤖 AI Engineer</option>
-            <option value="data_scientist">📊 Data Scientist</option>
-            <option value="mental_health_admin">🏥 Mental Health Administrator</option>
-            <option value="emergency_team">🚨 Emergency Contact Team</option>
-            <option value="security_analyst">🔒 Security Analyst</option>
-            <option value="financial_team">💰 Financial Team</option>
-            <option value="system_admin">⚙️ System Administrator</option>
+            <option value="patient">Patient/User</option>
+            <option value="software_engineer">Software Engineer</option>
+            <option value="data_scientist">Data Scientist</option>
+            <option value="mental_health_admin">Mental Health Administrator</option>
+            <option value="emergency_team">Emergency Contact Team</option>
+            <option value="system_admin">System Administrator</option>
           </select>
         </div>
 
