Update to Harmony-AI color palette: Teal Blue primary, Sage Green success, Soft Coral alerts, Cool Off-White background

--- a/feature-daily-logs.html
+++ b/feature-daily-logs.html
@@ -10,7 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
         .feature-header {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #2A9D8F 0%, #1F7A6E 100%);
             color: white;
             padding: 2rem;
             border-radius: 12px;
@@ -51,7 +51,7 @@
         }
 
         .logs-table table thead {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #2A9D8F 0%, #1F7A6E 100%);
             color: white;
         }
 
@@ -83,7 +83,7 @@
 
         .stat-mini {
             display: inline-block;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #2A9D8F 0%, #1F7A6E 100%);
             color: white;
             padding: 0.75rem 1.25rem;
             border-radius: 8px;
@@ -157,14 +157,14 @@
                     <div class="col-md-6 mb-3">
                         <label for="stressLevel" class="form-label">Stress Level (1-10)</label>
                         <input type="range" class="form-range" id="stressLevel" min="1" max="10" value="5">
-                        <small id="stressValue" style="color: #667eea; font-weight: 600;">5</small>
+                        <small id="stressValue" style="color: #2A9D8F; font-weight: 600;">5</small>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-md-6 mb-3">
                         <label for="anxietyLevel" class="form-label">Anxiety Level (1-10)</label>
                         <input type="range" class="form-range" id="anxietyLevel" min="1" max="10" value="5">
-                        <small id="anxietyValue" style="color: #667eea; font-weight: 600;">5</small>
+                        <small id="anxietyValue" style="color: #2A9D8F; font-weight: 600;">5</small>
                     </div>
                     <div class="col-md-6 mb-3">
                         <label for="sleepHours" class="form-label">Sleep Hours</label>
