--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <li><a href="./feature-recommendations.html">💡 Recommendations</a></li>
         <li><a href="./feature-sessions.html">👨‍⚕️ Sessions</a></li>
         <li><a href="./feature-progress.html">📈 Progress</a></li>
-        <li><a href="./feature-crisis.html">🚨 Crisis Support</a></li>
-        <li><a href="./login.html" style="color: #667eea; font-weight: bold;">🔐 Login</a></li>
+        <li><a href="./feature-crisis.html">Crisis Support</a></li>
+        <li><a href="./login.html" style="color: #2A9D8F; font-weight: bold;">Login</a></li>
       </ul>
       <div class="nav-actions">
         <button class="theme-toggle" type="button" aria-label="Toggle theme"></button>
@@ -159,7 +159,7 @@
             <li><a href="./index.html">Dashboard</a></li>
             <li><a href="./feature-daily-logs.html">Mood Logging</a></li>
             <li><a href="./feature-sessions.html">Counsellors</a></li>
-            <li><a href="./login.html" style="color: #667eea; font-weight: bold;">🔐 Login</a></li>
+            <li><a href="./login.html" style="color: #2A9D8F; font-weight: bold;">Login</a></li>
           </ul>
         </div>
         <div class="footer-section">
