--- a/admin.html
+++ b/admin.html
@@ -24,12 +24,12 @@
         }
 
         .admin-header {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #2A9D8F 0%, #1F7A6E 100%);
             color: white;
             padding: 2rem 2.5rem;
             border-radius: 16px;
             margin-bottom: 2rem;
-            box-shadow: 0 10px 40px rgba(102, 126, 234, 0.3);
+            box-shadow: 0 10px 40px rgba(42, 157, 143, 0.3);
         }
 
         .admin-header h1 {
@@ -145,7 +145,7 @@
         .stat-card .number {
             font-size: 2rem;
             font-weight: 700;
-            color: #667eea;
+            color: #2A9D8F;
             line-height: 1.2;
         }
 
@@ -185,15 +185,15 @@
 
         .table-tab:hover {
             background: var(--bg-secondary);
-            border-color: #667eea;
-            color: #667eea;
+            border-color: #2A9D8F;
+            color: #2A9D8F;
         }
 
         .table-tab.active {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #2A9D8F 0%, #1F7A6E 100%);
             color: white;
             border-color: transparent;
-            box-shadow: 0 4px 15px rgba(102, 126, 234, 0.4);
+            box-shadow: 0 4px 15px rgba(42, 157, 143, 0.4);
         }
 
         /* Data Section */
@@ -224,7 +224,7 @@
         }
 
         .btn-add {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #2A9D8F 0%, #1F7A6E 100%);
             color: white;
             border: none;
             padding: 0.75rem 1.5rem;
@@ -236,12 +236,12 @@
             display: flex;
             align-items: center;
             gap: 0.5rem;
-            box-shadow: 0 4px 15px rgba(102, 126, 234, 0.3);
+            box-shadow: 0 4px 15px rgba(42, 157, 143, 0.3);
         }
 
         .btn-add:hover {
             transform: translateY(-2px);
-            box-shadow: 0 6px 20px rgba(102, 126, 234, 0.4);
+            box-shadow: 0 6px 20px rgba(42, 157, 143, 0.4);
         }
 
         /* Data Table */
@@ -258,7 +258,7 @@
         }
 
         .data-table th {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #2A9D8F 0%, #1F7A6E 100%);
             color: white;
             padding: 1rem 0.75rem;
             text-align: left;
@@ -340,7 +340,7 @@
             width: 40px;
             height: 40px;
             border: 4px solid var(--border-color);
-            border-top-color: #667eea;
+            border-top-color: #2A9D8F;
             border-radius: 50%;
             animation: spin 1s linear infinite;
             margin: 0 auto 1rem;
@@ -373,7 +373,7 @@
         }
 
         .modal-header {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #2A9D8F 0%, #1F7A6E 100%);
             color: white;
             border-radius: 16px 16px 0 0;
             padding: 1.25rem 1.5rem;
@@ -411,9 +411,9 @@
         .form-control:focus,
         .form-select:focus {
             background: var(--bg-secondary);
-            border-color: #667eea;
+            border-color: #2A9D8F;
             color: var(--text-primary);
-            box-shadow: 0 0 0 3px rgba(102, 126, 234, 0.15);
+            box-shadow: 0 0 0 3px rgba(42, 157, 143, 0.15);
         }
 
         /* Badge for data types */
@@ -565,7 +565,7 @@
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
                     <button type="button" class="btn btn-primary" onclick="saveRecord()"
-                        style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); border: none;">💾 Save
+                        style="background: linear-gradient(135deg, #2A9D8F 0%, #1F7A6E 100%); border: none;">Save
                         Record</button>
                 </div>
             </div>
