--- a/dashboard.html
+++ b/dashboard.html
@@ -10,12 +10,12 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
         .dashboard-header {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #2A9D8F 0%, #1F7A6E 100%);
             color: white;
             padding: 2rem 1.5rem;
             border-radius: 12px;
             margin-bottom: 2rem;
-            box-shadow: 0 4px 15px rgba(102, 126, 234, 0.3);
+            box-shadow: 0 4px 15px rgba(42, 157, 143, 0.3);
         }
 
         .dashboard-header h1 {
@@ -52,7 +52,7 @@
         .stat-value {
             font-size: 2.5rem;
             font-weight: bold;
-            color: #667eea;
+            color: #2A9D8F;
             margin: 0.5rem 0;
         }
 
@@ -64,7 +64,7 @@
 
         .role-badge {
             display: inline-block;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #2A9D8F 0%, #1F7A6E 100%);
             color: white;
             padding: 0.5rem 1rem;
             border-radius: 20px;
@@ -136,7 +136,7 @@
         }
 
         .section-title {
-            border-bottom: 3px solid #667eea;
+            border-bottom: 3px solid #2A9D8F;
             padding-bottom: 0.75rem;
             margin-bottom: 1.5rem;
             font-size: 1.5rem;
@@ -152,7 +152,7 @@
         }
 
         .data-table table thead {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #2A9D8F 0%, #1F7A6E 100%);
             color: white;
         }
 
