--- a/feature-ai-analysis.html
+++ b/feature-ai-analysis.html
@@ -10,7 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
         .feature-header {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #2A9D8F 0%, #1F7A6E 100%);
             color: white;
             padding: 2rem;
             border-radius: 12px;
@@ -23,9 +23,9 @@
             border-radius: 10px;
             box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
             margin-bottom: 1.5rem;
-            border-left: 4px solid #667eea;
+            border-left: 4px solid #2A9D8F;
             border: 1px solid var(--border-color);
-            border-left: 4px solid #667eea;
+            border-left: 4px solid #2A9D8F;
             color: var(--text-primary);
         }
 
