--- a/feature-progress.html
+++ b/feature-progress.html
@@ -10,7 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
         .feature-header {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #2A9D8F 0%, #1F7A6E 100%);
             color: white;
             padding: 2rem;
             border-radius: 12px;
@@ -37,7 +37,7 @@
             display: inline-block;
             padding: 0.5rem 1rem;
             border-radius: 8px;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #2A9D8F 0%, #1F7A6E 100%);
             color: white;
             font-weight: 600;
             margin-right: 0.5rem;
@@ -62,7 +62,7 @@
             padding: 1rem;
             border-radius: 8px;
             margin-bottom: 1rem;
-            border-left: 4px solid #667eea;
+            border-left: 4px solid #2A9D8F;
             color: var(--text-primary);
         }
 
@@ -173,7 +173,7 @@
                 <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 1rem; margin-bottom: 2rem;">
                     <div class="progress-card">
                         <h5 style="margin-top: 0;">Emotional Stability</h5>
-                        <div style="font-size: 2.5rem; font-weight: bold; color: #667eea;">${emotionalStability}%</div>
+                        <div style="font-size: 2.5rem; font-weight: bold; color: #2A9D8F;">${emotionalStability}%</div>
                         <p style="margin: 0.5rem 0 0 0; font-size: 0.9rem;">Current Score</p>
                     </div>
                     <div class="progress-card">
