--- a/feature-recommendations.html
+++ b/feature-recommendations.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="assets/css/theme.css">
     <style>
         .feature-header {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #2A9D8F 0%, #1F7A6E 100%);
             color: white;
             padding: 2rem;
             border-radius: 12px;
@@ -42,7 +42,7 @@
         }
 
         .cat-mindfulness {
-            background: #667eea;
+            background: #2A9D8F;
             color: white;
         }
 
@@ -157,13 +157,13 @@
                             ${wellnessTip ? `<strong>Tip:</strong> ${wellnessTip}<br>` : ''}
                             ${rec.frequency ? `<strong>Frequency:</strong> ${rec.frequency}<br>` : ''}
                             ${rec.duration ? `<strong>Duration:</strong> ${rec.duration}<br>` : ''}
-                            ${rec.status ? `<strong>Status:</strong> <span style="color: #667eea; font-weight: 600;">${rec.status}</span>` : ''}
+                            ${rec.status ? `<strong>Status:</strong> <span style="color: #2A9D8F; font-weight: 600;">${rec.status}</span>` : ''}
                         </p>
                         ${rec.adherence ? `
                         <div style="background: var(--bg-tertiary); padding: 0.75rem; border-radius: 5px; margin-top: 1rem;">
                             <strong style="font-size: 0.9rem;">Progress: ${rec.adherence}%</strong>
                             <div style="width: 100%; height: 8px; background: var(--border-color); border-radius: 4px; margin-top: 0.5rem; overflow: hidden;">
-                                <div style="width: ${rec.adherence}%; height: 100%; background: linear-gradient(90deg, #667eea, #764ba2); transition: width 0.3s;"></div>
+                                <div style="width: ${rec.adherence}%; height: 100%; background: linear-gradient(90deg, #2A9D8F, #1F7A6E); transition: width 0.3s;"></div>
                             </div>
                         </div>
                         ` : ''}
