Fix: Add anxiety_level to dailylogs, improve form validation, ensure patient data saves to database

--- a/admin.html
+++ b/admin.html
@@ -606,6 +606,7 @@
                     { name: 'user_id', label: 'User ID', type: 'number', required: true },
                     { name: 'mood_level', label: 'Mood Level', type: 'select', options: ['Happy', 'Sad', 'Anxious', 'Calm', 'Energetic', 'Tired', 'Neutral', 'Stressed', 'Angry'] },
                     { name: 'stress_level', label: 'Stress Level (1-10)', type: 'number' },
+                    { name: 'anxiety_level', label: 'Anxiety Level (1-10)', type: 'number' },
                     { name: 'sleep_hours', label: 'Sleep Hours', type: 'number' },
                     { name: 'notes', label: 'Notes', type: 'textarea' },
                     { name: 'log_date', label: 'Log Date', type: 'date' }
