Resize Risk Prediction Scores chart to smaller size (500px x 350px)

--- a/feature-ai-analysis.html
+++ b/feature-ai-analysis.html
@@ -128,7 +128,7 @@
         <div id="analysisOverview"></div>
 
         <!-- Risk Scores Chart -->
-        <div class="chart-container">
+        <div class="chart-container" style="max-width: 500px; height: 350px;">
             <h3 style="margin-top: 0;">📊 Risk Prediction Scores</h3>
             <canvas id="riskDistributionChart"></canvas>
         </div>
