--- a/feature-crisis.html
+++ b/feature-crisis.html
@@ -145,6 +145,21 @@
             </ul>
             <div class="nav-actions">
                 <button class="theme-toggle" type="button" aria-label="Toggle theme"></button>
+                <div class="notification-bell" id="notificationBell" style="display:none;"><span
+                        class="bell-icon">🔔</span><span class="notification-badge hidden">0</span>
+                    <div class="notification-dropdown">
+                        <div class="notification-header">
+                            <h4>Notifications</h4><button class="mark-all-read"
+                                onclick="NotificationSystem.markAllAsRead()">Mark all read</button>
+                        </div>
+                        <div class="notification-list"></div>
+                    </div>
+                </div>
+                <div class="user-avatar-container" id="userAvatarContainer" style="display:none;"></div>
+                <a href="./login.html" class="nav-auth-btn login" id="loginBtn"><span class="btn-icon">🔑</span>
+                    Login</a>
+                <button class="nav-auth-btn logout" id="logoutBtn" onclick="logout()" style="display:none;"><span
+                        class="btn-icon">🚪</span> Logout</button>
                 <button class="mobile-menu-btn" aria-label="Toggle menu" title="Open navigation">
                     <svg width="20" height="20" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                         <rect x="3" y="6" width="18" height="2" rx="1" fill="currentColor" />
@@ -331,9 +346,33 @@
             }
         }
 
+        // Auth button visibility
+        function updateAuthButton() {
+            const userId = localStorage.getItem('userId');
+            const userRole = localStorage.getItem('userRole');
+            const loginBtn = document.getElementById('loginBtn');
+            const logoutBtn = document.getElementById('logoutBtn');
+            if (userId && userRole) {
+                if (loginBtn) loginBtn.style.display = 'none';
+                if (logoutBtn) logoutBtn.style.display = 'inline-flex';
+            } else {
+                if (loginBtn) loginBtn.style.display = 'inline-flex';
+                if (logoutBtn) logoutBtn.style.display = 'none';
+            }
+        }
+
+        function logout() {
+            localStorage.removeItem('userId');
+            localStorage.removeItem('userRole');
+            localStorage.removeItem('designation');
+            localStorage.removeItem('currentUser');
+            window.location.href = './login.html';
+        }
+
         document.addEventListener('DOMContentLoaded', () => {
             loadCrisisContent();
             setupMobileMenu();
+            updateAuthButton();
         });
     </script>
 </body>
