--- a/login.html
+++ b/login.html
@@ -148,6 +148,44 @@
       cursor: not-allowed;
     }
 
+    .login-submit.loading {
+      pointer-events: none;
+    }
+
+    .login-submit.loading::after {
+      content: '';
+      width: 16px;
+      height: 16px;
+      border: 2px solid rgba(255, 255, 255, 0.3);
+      border-top-color: white;
+      border-radius: 50%;
+      animation: spin 0.8s linear infinite;
+      margin-left: 0.5rem;
+    }
+
+    @keyframes spin {
+      to {
+        transform: rotate(360deg);
+      }
+    }
+
+    .form-group-login input.error,
+    .form-group-login select.error {
+      border-color: #E76F51;
+      box-shadow: 0 0 0 3px rgba(231, 111, 81, 0.1);
+    }
+
+    .error-message {
+      color: #E76F51;
+      font-size: 0.75rem;
+      margin-top: 0.25rem;
+      display: none;
+    }
+
+    .error-message.show {
+      display: block;
+    }
+
     .login-info {
       background: var(--bg-tertiary);
       border: 1px solid var(--border-color);
