--- a/dashboard.html
+++ b/dashboard.html
@@ -228,6 +228,7 @@
             </ul>
             <div class="nav-actions">
                 <button class="theme-toggle" type="button" aria-label="Toggle theme"></button>
+                <a href="./login.html" class="nav-auth-btn login" id="authBtn">🔐 Login</a>
                 <button class="mobile-menu-btn" aria-label="Toggle menu" title="Open navigation">
                     <svg width="20" height="20" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                         <rect x="3" y="6" width="18" height="2" rx="1" fill="currentColor" />
@@ -427,13 +428,33 @@
         }
 
         function logout() {
+            localStorage.removeItem('userId');
             localStorage.removeItem('userRole');
             localStorage.removeItem('designation');
+            localStorage.removeItem('currentUser');
             window.location.href = './login.html';
+        }
+
+        function updateAuthBtn() {
+            const btn = document.getElementById('authBtn');
+            if (!btn) return;
+            const userId = localStorage.getItem('userId');
+            if (userId) {
+                btn.innerHTML = '🔓 Logout';
+                btn.className = 'nav-auth-btn logout';
+                btn.href = '#';
+                btn.onclick = function (e) { e.preventDefault(); logout(); };
+            } else {
+                btn.innerHTML = '🔐 Login';
+                btn.className = 'nav-auth-btn login';
+                btn.href = './login.html';
+                btn.onclick = null;
+            }
         }
 
         // Initialize on page load
         document.addEventListener('DOMContentLoaded', () => {
+            updateAuthBtn();
             const userRole = localStorage.getItem('userRole');
             if (!userRole) {
                 console.warn('⚠️ No user role found, redirecting to login');
