Fix dashboard: add emojis to nav links, add auth.js

--- a/dashboard.html
+++ b/dashboard.html
@@ -216,15 +216,15 @@
         <div class="nav-container">
             <a href="./index.html" class="nav-logo">🧠 Harmony AI</a>
             <ul class="nav-menu">
-                <li><a href="./index.html">Home</a></li>
-                <li><a href="./dashboard.html" class="active">Dashboard</a></li>
-                <li><a href="./admin.html" id="adminLink" style="display: none;">Admin</a></li>
-                <li><a href="./feature-daily-logs.html">Daily Logs</a></li>
-                <li><a href="./feature-ai-analysis.html">AI Analysis</a></li>
-                <li><a href="./feature-recommendations.html">Recommendations</a></li>
-                <li><a href="./feature-sessions.html">Sessions</a></li>
-                <li><a href="./feature-progress.html">Progress</a></li>
-                <li><a href="./feature-crisis.html">Crisis Support</a></li>
+                <li><a href="./index.html">🏠 Home</a></li>
+                <li><a href="./dashboard.html" class="active">📊 Dashboard</a></li>
+                <li><a href="./admin.html" id="adminLink" style="display: none;">⚙️ Admin</a></li>
+                <li><a href="./feature-daily-logs.html">📝 Daily Logs</a></li>
+                <li><a href="./feature-ai-analysis.html">🤖 AI Analysis</a></li>
+                <li><a href="./feature-recommendations.html">💡 Recommendations</a></li>
+                <li><a href="./feature-sessions.html">👨‍⚕️ Sessions</a></li>
+                <li><a href="./feature-progress.html">📈 Progress</a></li>
+                <li><a href="./feature-crisis.html">🚨 Crisis Support</a></li>
             </ul>
             <div class="nav-actions">
                 <button class="theme-toggle" type="button" aria-label="Toggle theme"></button>
@@ -330,6 +330,7 @@
     <script src="assets/js/dashboard-generators.js"></script>
     <script src="assets/js/charts-manager.js"></script>
     <script src="assets/js/theme.js"></script>
+    <script src="assets/js/auth.js"></script>
 
     <script>
         // Initialize Dashboard
