--- a/dashboard.html
+++ b/dashboard.html
@@ -7,6 +7,7 @@
     <title>Harmony AI - Dashboard</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/theme.css">
+    <link rel="stylesheet" href="assets/css/button-states.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
         .dashboard-header {
@@ -228,7 +229,10 @@
             </ul>
             <div class="nav-actions">
                 <button class="theme-toggle" type="button" aria-label="Toggle theme"></button>
-                <a href="./login.html" class="nav-auth-btn login" id="authBtn">🔐 Login</a>
+                <a href="./login.html" class="nav-auth-btn login" id="loginBtn"><span class="btn-icon">🔑</span>
+                    Login</a>
+                <button class="nav-auth-btn logout" id="logoutBtn" onclick="logout()" style="display:none;"><span
+                        class="btn-icon">🚪</span> Logout</button>
                 <button class="mobile-menu-btn" aria-label="Toggle menu" title="Open navigation">
                     <svg width="20" height="20" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                         <rect x="3" y="6" width="18" height="2" rx="1" fill="currentColor" />
@@ -326,6 +330,7 @@
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/api-service.js"></script>
+    <script src="assets/js/notifications.js"></script>
     <script src="assets/js/patient-data.js"></script>
     <script src="assets/js/dashboard-generators.js"></script>
     <script src="assets/js/charts-manager.js"></script>
@@ -392,7 +397,7 @@
             // Generate role-specific content
             const roleContent = document.getElementById('roleContent');
             try {
-                const content = DashboardGenerators.generateDashboardByRole(userRole);
+                const content = await DashboardGenerators.generateDashboardByRole(userRole);
                 roleContent.innerHTML = content;
             } catch (error) {
                 console.error('Error generating dashboard:', error);
@@ -436,26 +441,24 @@
             window.location.href = './login.html';
         }
 
-        function updateAuthBtn() {
-            const btn = document.getElementById('authBtn');
-            if (!btn) return;
+        // Auth button visibility
+        function updateAuthButton() {
             const userId = localStorage.getItem('userId');
-            if (userId) {
-                btn.innerHTML = '🔓 Logout';
-                btn.className = 'nav-auth-btn logout';
-                btn.href = '#';
-                btn.onclick = function (e) { e.preventDefault(); logout(); };
+            const userRole = localStorage.getItem('userRole');
+            const loginBtn = document.getElementById('loginBtn');
+            const logoutBtn = document.getElementById('logoutBtn');
+            if (userId && userRole) {
+                if (loginBtn) loginBtn.style.display = 'none';
+                if (logoutBtn) logoutBtn.style.display = 'inline-flex';
             } else {
-                btn.innerHTML = '🔐 Login';
-                btn.className = 'nav-auth-btn login';
-                btn.href = './login.html';
-                btn.onclick = null;
+                if (loginBtn) loginBtn.style.display = 'inline-flex';
+                if (logoutBtn) logoutBtn.style.display = 'none';
             }
         }
 
         // Initialize on page load
         document.addEventListener('DOMContentLoaded', () => {
-            updateAuthBtn();
+            updateAuthButton();
             const userRole = localStorage.getItem('userRole');
             if (!userRole) {
                 console.warn('⚠️ No user role found, redirecting to login');
