--- a/feature-ai-analysis.html
+++ b/feature-ai-analysis.html
@@ -7,6 +7,7 @@
     <title>AI-Based Mood & Journal Analysis - Harmony AI</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/theme.css">
+    <link rel="stylesheet" href="assets/css/button-states.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
         .feature-header {
@@ -175,7 +176,10 @@
             </ul>
             <div class="nav-actions">
                 <button class="theme-toggle" type="button" aria-label="Toggle theme"></button>
-                <a href="./login.html" class="nav-auth-btn login" id="authBtn">🔐 Login</a>
+                <a href="./login.html" class="nav-auth-btn login" id="loginBtn"><span class="btn-icon">🔑</span>
+                    Login</a>
+                <button class="nav-auth-btn logout" id="logoutBtn" onclick="logout()" style="display:none;"><span
+                        class="btn-icon">🚪</span> Logout</button>
                 <button class="mobile-menu-btn" aria-label="Toggle menu" title="Open navigation">
                     <svg width="20" height="20" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                         <rect x="3" y="6" width="18" height="2" rx="1" fill="currentColor" />
@@ -198,6 +202,66 @@
         <!-- AI Analysis Summary Cards -->
         <div id="analysisSummary"
             style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 1rem; margin-bottom: 2rem;">
+        </div>
+
+        <!-- Real-Time AI Analysis Panel -->
+        <div class="content-section" style="margin-bottom: 2rem;">
+            <h3 style="margin-top: 0;">💭 Real-Time Thought Analysis</h3>
+            <p style="color: var(--text-secondary); font-size: 0.9rem; margin-bottom: 1rem;">Share your current thoughts
+                and get instant AI feedback</p>
+
+            <div style="margin-bottom: 1rem;">
+                <label for="realtimeThought" class="form-label"
+                    style="font-weight: 600; color: var(--text-primary);">How are you feeling right now?</label>
+                <textarea id="realtimeThought" class="form-control" rows="4"
+                    placeholder="Type your thoughts here... (e.g., 'I'm feeling anxious about work today')"
+                    style="background: var(--bg-secondary); border: 2px solid var(--border-color); color: var(--text-primary); border-radius: 10px; padding: 1rem; font-size: 0.95rem;"></textarea>
+            </div>
+
+            <div style="display: flex; gap: 0.75rem; margin-bottom: 1.5rem;">
+                <button id="analyzeBtn" class="btn btn-primary" onclick="analyzeRealtime()"
+                    style="background: linear-gradient(135deg, #2A9D8F 0%, #1F7A6E 100%); border: none; padding: 0.75rem 1.5rem; border-radius: 10px; font-weight: 600; display: flex; align-items: center; gap: 0.5rem;">
+                    <span>🤖</span> Analyze My Thoughts
+                </button>
+                <button class="btn btn-secondary"
+                    onclick="document.getElementById('realtimeThought').value = ''; document.getElementById('realtimeResults').style.display = 'none';"
+                    style="padding: 0.75rem 1.5rem; border-radius: 10px; font-weight: 600;">
+                    Clear
+                </button>
+            </div>
+
+            <div id="realtimeResults" style="display: none;">
+                <div
+                    style="background: var(--bg-tertiary); padding: 1.5rem; border-radius: 12px; border-left: 4px solid #2A9D8F;">
+                    <h5 style="margin: 0 0 1rem 0; color: var(--text-primary); font-size: 1.1rem;">⚡ Instant Analysis
+                        Results</h5>
+                    <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 1rem;">
+                        <div>
+                            <p style="margin: 0; font-size: 0.85rem; color: var(--text-secondary);">Emotion Detected</p>
+                            <p id="rtEmotion"
+                                style="margin: 0.25rem 0 0 0; font-size: 1.3rem; font-weight: 600; color: var(--text-primary);">
+                                -</p>
+                        </div>
+                        <div>
+                            <p style="margin: 0; font-size: 0.85rem; color: var(--text-secondary);">Risk Score</p>
+                            <p id="rtRisk"
+                                style="margin: 0.25rem 0 0 0; font-size: 1.3rem; font-weight: 600; color: var(--text-primary);">
+                                -</p>
+                        </div>
+                        <div>
+                            <p style="margin: 0; font-size: 0.85rem; color: var(--text-secondary);">Sentiment</p>
+                            <p id="rtSentiment"
+                                style="margin: 0.25rem 0 0 0; font-size: 1.3rem; font-weight: 600; color: var(--text-primary);">
+                                -</p>
+                        </div>
+                    </div>
+                    <div style="margin-top: 1rem; padding-top: 1rem; border-top: 1px solid var(--border-color);">
+                        <p style="margin: 0; font-size: 0.85rem; color: var(--text-secondary);">💡 AI Suggestion</p>
+                        <p id="rtSuggestion"
+                            style="margin: 0.5rem 0 0 0; color: var(--text-primary); line-height: 1.6;">-</p>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <!-- AI Analysis Table -->
@@ -244,6 +308,7 @@
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/api-service.js"></script>
+    <script src="assets/js/notifications.js"></script>
     <script src="assets/js/patient-data.js"></script>
     <script src="assets/js/charts-manager.js"></script>
     <script src="assets/js/theme.js"></script>
@@ -614,6 +679,84 @@
             setupMobileMenu();
             updateAuthButton();
         });
+
+        // Real-time analysis function
+        async function analyzeRealtime() {
+            const thought = document.getElementById('realtimeThought').value.trim();
+            const btn = document.getElementById('analyzeBtn');
+            const resultsDiv = document.getElementById('realtimeResults');
+
+            if (!thought) {
+                alert('Please enter your thoughts first');
+                return;
+            }
+
+            // Show loading state
+            btn.disabled = true;
+            btn.innerHTML = '<span>⏳</span> Analyzing...';
+            resultsDiv.style.display = 'none';
+
+            try {
+                const userId = localStorage.getItem('userId') || 1;
+
+                // Call Python AI service
+                const response = await fetch('http://localhost:5000/analyze/realtime', {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({
+                        user_id: parseInt(userId),
+                        text: thought
+                    })
+                });
+
+                if (!response.ok) {
+                    throw new Error('AI service unavailable');
+                }
+
+                const result = await response.json();
+
+                // Display results
+                document.getElementById('rtEmotion').textContent = result.emotion || 'Neutral';
+                document.getElementById('rtEmotion').className = `emotion-badge ${getEmotionClass(result.emotion)}`;
+
+                const riskLevel = getRiskLevel(result.risk_score || 0);
+                document.getElementById('rtRisk').innerHTML = `<span class="risk-badge ${riskLevel.class}">${result.risk_score}% (${riskLevel.level})</span>`;
+
+                const sentiment = result.sentiment || 0;
+                document.getElementById('rtSentiment').textContent = `${sentiment > 0 ? '+' : ''}${sentiment.toFixed(2)}`;
+                document.getElementById('rtSentiment').className = getSentimentClass(sentiment);
+
+                // Generate suggestion based on risk and sentiment
+                let suggestion = '';
+                if (result.risk_score > 70) {
+                    suggestion = '🚨 Your thoughts indicate high stress. Consider reaching out to a counselor or using our crisis support resources.';
+                } else if (result.risk_score > 40) {
+                    suggestion = '💪 You might be experiencing some challenges. Try our recommended coping strategies or schedule a session.';
+                } else if (sentiment > 0.3) {
+                    suggestion = '🌟 Great to see positive thoughts! Keep up the good work and maintain your wellness routine.';
+                } else if (sentiment < -0.3) {
+                    suggestion = '🤗 It seems you\'re going through a tough time. Remember, it\'s okay to ask for help. Consider journaling or talking to someone.';
+                } else {
+                    suggestion = '✨ Your emotional state appears balanced. Continue monitoring your mood and practicing self-care.';
+                }
+
+                document.getElementById('rtSuggestion').textContent = suggestion;
+                resultsDiv.style.display = 'block';
+
+                // Success state
+                btn.innerHTML = '<span>✓</span> Analysis Complete';
+                setTimeout(() => {
+                    btn.innerHTML = '<span>🤖</span> Analyze My Thoughts';
+                    btn.disabled = false;
+                }, 2000);
+
+            } catch (error) {
+                console.error('Real-time analysis error:', error);
+                alert('⚠️ AI analysis service is currently unavailable. Please make sure the Python AI service is running on port 5000.');
+                btn.innerHTML = '<span>🤖</span> Analyze My Thoughts';
+                btn.disabled = false;
+            }
+        }
     </script>
 </body>
 
