--- a/feature-daily-logs.html
+++ b/feature-daily-logs.html
@@ -7,6 +7,7 @@
     <title>Daily Mood & Stress Logging - Harmony AI</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/theme.css">
+    <link rel="stylesheet" href="assets/css/button-states.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
         .feature-header {
@@ -115,6 +116,10 @@
             </ul>
             <div class="nav-actions">
                 <button class="theme-toggle" type="button" aria-label="Toggle theme"></button>
+                <a href="./login.html" class="nav-auth-btn login" id="loginBtn"><span class="btn-icon">🔑</span>
+                    Login</a>
+                <button class="nav-auth-btn logout" id="logoutBtn" onclick="logout()" style="display:none;"><span
+                        class="btn-icon">🚪</span> Logout</button>
                 <button class="mobile-menu-btn" aria-label="Toggle menu" title="Open navigation">
                     <svg width="20" height="20" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                         <rect x="3" y="6" width="18" height="2" rx="1" fill="currentColor" />
@@ -141,18 +146,12 @@
             <form id="moodLogForm">
                 <div class="row">
                     <div class="col-md-6 mb-3">
-                        <label for="mood" class="form-label">Mood</label>
-                        <select class="form-select" id="mood" required>
-                            <option value="">Select mood...</option>
-                            <option value="Happy">😊 Happy</option>
-                            <option value="Sad">😢 Sad</option>
-                            <option value="Anxious">😰 Anxious</option>
-                            <option value="Calm">😌 Calm</option>
-                            <option value="Energetic">⚡ Energetic</option>
-                            <option value="Tired">😴 Tired</option>
-                            <option value="Neutral">😐 Neutral</option>
-                            <option value="Angry">😠 Angry</option>
-                        </select>
+                        <label for="mood" class="form-label">Mood Level (1-10)</label>
+                        <input type="range" class="form-range" id="mood" min="1" max="10" value="5">
+                        <small id="moodValue" style="color: #2A9D8F; font-weight: 600;">5 - Neutral</small>
+                        <div class="mt-1" style="font-size: 0.75rem; color: var(--text-secondary);">
+                            1-2: Very Low | 3-4: Low | 5-6: Neutral | 7-8: Good | 9-10: Great
+                        </div>
                     </div>
                     <div class="col-md-6 mb-3">
                         <label for="stressLevel" class="form-label">Stress Level (1-10)</label>
@@ -226,6 +225,7 @@
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/api-service.js"></script>
+    <script src="assets/js/notifications.js"></script>
     <script src="assets/js/patient-data.js"></script>
     <script src="assets/js/charts-manager.js"></script>
     <script src="assets/js/theme.js"></script>
@@ -239,6 +239,15 @@
         });
         document.getElementById('anxietyLevel').addEventListener('input', (e) => {
             document.getElementById('anxietyValue').textContent = e.target.value;
+        });
+        document.getElementById('mood').addEventListener('input', (e) => {
+            const val = parseInt(e.target.value);
+            const labels = {
+                1: '😢 Very Low', 2: '😔 Low', 3: '😟 Below Average', 4: '😐 Slightly Low',
+                5: '😐 Neutral', 6: '🙂 Slightly Good', 7: '😊 Good', 8: '😄 Very Good',
+                9: '🤩 Great', 10: '🥳 Excellent'
+            };
+            document.getElementById('moodValue').textContent = val + ' - ' + (labels[val] || 'Neutral');
         });
 
         // Load and display logs from API
@@ -338,7 +347,7 @@
 
             const logData = {
                 user_id: parseInt(userId),
-                mood_level: document.getElementById('mood').value,
+                mood_level: parseInt(document.getElementById('mood').value),
                 stress_level: parseInt(document.getElementById('stressLevel').value),
                 anxiety_level: parseInt(document.getElementById('anxietyLevel').value),
                 sleep_hours: parseFloat(document.getElementById('sleepHours').value),
@@ -358,6 +367,8 @@
             document.getElementById('moodLogForm').reset();
             document.getElementById('stressValue').textContent = '5';
             document.getElementById('anxietyValue').textContent = '5';
+            document.getElementById('moodValue').textContent = '5 - Neutral';
+            document.getElementById('mood').value = '5';
         });
 
         // Mobile menu setup
@@ -369,10 +380,34 @@
             }
         }
 
+        // Auth button visibility
+        function updateAuthButton() {
+            const userId = localStorage.getItem('userId');
+            const userRole = localStorage.getItem('userRole');
+            const loginBtn = document.getElementById('loginBtn');
+            const logoutBtn = document.getElementById('logoutBtn');
+            if (userId && userRole) {
+                if (loginBtn) loginBtn.style.display = 'none';
+                if (logoutBtn) logoutBtn.style.display = 'inline-flex';
+            } else {
+                if (loginBtn) loginBtn.style.display = 'inline-flex';
+                if (logoutBtn) logoutBtn.style.display = 'none';
+            }
+        }
+
+        function logout() {
+            localStorage.removeItem('userId');
+            localStorage.removeItem('userRole');
+            localStorage.removeItem('designation');
+            localStorage.removeItem('currentUser');
+            window.location.href = './login.html';
+        }
+
         // Initialize
         document.addEventListener('DOMContentLoaded', () => {
             loadMoodLogs();
             setupMobileMenu();
+            updateAuthButton();
         });
     </script>
 </body>
