--- a/feature-recommendations.html
+++ b/feature-recommendations.html
@@ -7,6 +7,7 @@
     <title>Personalized Recommendations - Harmony AI</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/theme.css">
+    <link rel="stylesheet" href="assets/css/button-states.css">
     <style>
         .feature-header {
             background: linear-gradient(135deg, #2A9D8F 0%, #1F7A6E 100%);
@@ -131,6 +132,7 @@
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/api-service.js"></script>
+    <script src="assets/js/notifications.js"></script>
     <script src="assets/js/patient-data.js"></script>
     <script src="assets/js/theme.js"></script>
 
