--- a/login.html
+++ b/login.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Login - Harmony AI</title>
   <link rel="stylesheet" href="assets/css/theme.css">
+  <link rel="stylesheet" href="assets/css/button-states.css">
   <style>
     body {
       display: flex;
@@ -300,6 +301,7 @@
   </div>
 
   <script src="assets/js/api-service.js"></script>
+  <script src="assets/js/notifications.js"></script>
   <script src="assets/js/theme.js"></script>
   <script src="assets/js/login.js"></script>
 </body>
